--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>SrpQuiz</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="QW2.jpg">
 </head>
 <body>
   <srp-root></srp-root>
